# tails-cloner-clone

./: README.md  pyproject.toml
.github/workflows/: release.yml
_legacyinstaller/: creator.py  gui.py  utils.py
docs/plans/: 2026-04-02-tails-cloner-design.md
docs/reports/: 2026-04-02-total-breakage-bug-report.md
packaging/: tails-cloner.spec
scripts/: build_appimage.sh
src/tails_cloner/: __init__.py  __main__.py  app.py  config.py  controller.py  creator.py  devices.py  models.py  remote_index.py  source.py
tests/: test_controller.py  test_creator.py  test_devices.py  test_models.py  test_remote_index.py  test_source.py
