[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tails-cloner"
version = "0.2.0"
description = "Refreshed standalone Tails cloner desktop app"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI" }]
license = { text = "GPL-2.0-or-later" }
keywords = ["tails", "usb", "cloner", "appimage", "tkinter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Environment :: X11 Applications :: GTK",
  "Topic :: System :: Installation/Setup",
]

[project.scripts]
tails-cloner = "tails_cloner.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
