[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tails-cloner"
version = "0.2.0"
description = "Refreshed standalone Tails cloner desktop app"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI" }]
license = { text = "GPL-2.0-or-later" }
keywords = ["tails", "usb", "cloner", "appimage", "tkinter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Topic :: System :: Installation/Setup",
]

dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.14.0",
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "pytest-asyncio>=0.24.0",
  "pydantic>=2.10.0",
]

[project.scripts]
tails-cloner = "tails_cloner.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["_legacyinstaller/"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # Pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "ARG",    # flake8-unused-arguments
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in argument defaults
  "UP037",  # quoted-annotation
]

[tool.ruff.lint.isort]
known-first-party = ["tails_cloner"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=tails_cloner --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
